--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			//function init() {
 			const data = d3.csv("https://raw.githubusercontent.com/bipinkarnati/bipinkarnati.github.io/master/USTotals.csv")
 			.then(function(data){return data});
-			//loaddata(data);
+			loaddata(data);
 			// function loaddata(data){
 			// data.forEach(function(d) {
 			// 	d.Year = +d.Year;
