--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
 			.attr('x',function(d,i) {return xs(parseInt(d.Year));})
 			.attr('y',function(d,i) {return ys(parseInt(d.MPersons));})
 			.attr('width', xs.bandwidth())
-			.attr('height',function(d,i) {return hs(parseInt(d.MPersons));})
-			.on("mouseover", function(d,i) {
-    			tooltip.style("visibility", "visible")
-    					.style("opacity", 1)
-						.style("left", (d3.event.pageX)+"px")
-						.style("top", (d3.event.pageY)+"py")
-						.html("Total Amount Distributed is $"+d.BCost+ "Billion Dollars");
-			})
-			.on("mouseout", function() {tooltip.style("opacity", 0)});
+			.attr('height',function(d,i) {return hs(parseInt(d.MPersons));});
+			// .on("mouseover", function(d,i) {
+    		// 	tooltip.style("visibility", "visible")
+    		// 			.style("opacity", 1)
+			// 			.style("left", (d3.event.pageX)+"px")
+			// 			.style("top", (d3.event.pageY)+"py")
+			// 			.html("Total Amount Distributed is $"+d.BCost+ "Billion Dollars");
+			// })
+			// .on("mouseout", function() {tooltip.style("opacity", 0)});
 						
 				// y axis
 			svg1.append("g")
