--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
 	<body onload='init()';>
 		<div class="intro">
 			    <p>
-			    	In the United States, the Supplemental Nutrition Assistance Program (SNAP), formerly yet still commonly known as the Food Stamp Program, 
-			    	is a federal program that provides food-purchasing assistance for low and no-income people. It is a federal aid program, administered by 
-			    	the United States Department of Agriculture under the Food and Nutrition Service (FNS), though benefits are distributed by specific departments 
-			    	of U.S. states.<br>
+			    	The Supplemental Nutrition Assistance Program (SNAP) is a United States federal program that provides food-purchasing assistance for low and no-income people. Below graph represents the stats of how many people were benefitted from this SNAP program FY2000-19. As we can see, there is a leap in number of people seeking assistance due to high unemployment rate during recession FY2008-11.In 2013, approximately 50 million people received benefits.<br>
 			    </p>
 		</div>		 
 		<div id="USChart" align="center">
