--- a/regions.html
+++ b/regions.html
@@ -20,10 +20,7 @@
 		</div>
 		<div class="intro">
 			<p>
-				In the United States, the Supplemental Nutrition Assistance Program (SNAP), formerly yet still commonly known as the Food Stamp Program, 
-				is a federal program that provides food-purchasing assistance for low and no-income people. It is a federal aid program, administered by 
-				the United States Department of Agriculture under the Food and Nutrition Service (FNS), though benefits are distributed by specific departments 
-				of U.S. states.<br>
+				In this page, we can see number of people benefitted from SNAP region wise. People from Southeast(SERO) the most number of benefits as compared to other regions followed by MWRO,WRO and SWRO. Unlike otehr regions, there is increase in the benefits received by SWRO in year 2015.<br>
 			</p>
 		</div>
 	</head>
@@ -31,7 +28,7 @@
 		<div>
 			<table>
 				<td>
-					<text>The below image is for FNS region representation only</text>
+					<text>The below image is for FNS region representation only. Source:</text>
 					<img src="/FNS Regions.png" align="left" animation-delay="2s">
 				</td>
 				<td>
