--- a/states.html
+++ b/states.html
@@ -20,10 +20,8 @@
 		</div>
 		<div class="intro">
 			<p>
-				In the United States, the Supplemental Nutrition Assistance Program (SNAP), formerly yet still commonly known as the Food Stamp Program, 
-				is a federal program that provides food-purchasing assistance for low and no-income people. It is a federal aid program, administered by 
-				the United States Department of Agriculture under the Food and Nutrition Service (FNS), though benefits are distributed by specific departments 
-				of U.S. states.				
+				Here we can see the state wise representation of number of people who received benefits for years 2000-2019. 
+				Use drop down menu to select a state.
 			</p>
 		</div>
 	</head>
