--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<body onload='init()';>
 		<div class="intro">
 			    <p>
-			    	The Supplemental Nutrition Assistance Program (SNAP) is a United States federal program that provides food-purchasing assistance for low and no-income people. Below graph represents the stats of how many people were benefitted from this SNAP program FY2000-19. As we can see, there is a leap in number of people seeking assistance due to high unemployment rate during recession FY2008-11.In 2013, approximately 50 million people received benefits.<br>
+			    	The Supplemental Nutrition Assistance Program (SNAP) is a United States federal program that provides food-purchasing assistance for low and no-income people. Below graph represents the stats of how many people were benefitted from this SNAP program FY2000-19. As we can see, there is a leap in number of people seeking assistance due to high unemployment rate during recession FY2008-11.In 2013, approximately 50 million people received benefits. To view region wise beneficiaries, please click "Beneficiaries By Regions" tab.<br>
 			    </p>
 		</div>		 
 		<div id="USChart" align="center">
@@ -166,7 +166,7 @@
 		<footer>
     		<ul>
         		<p>
-				<b>Desclaimer:</b> This site is built for learning purpose only.
+				<b>Disclaimer:</b> This site is built for learning purpose only.
 			</p>
 		</ul>
 		</footer>
