--- a/regions.html
+++ b/regions.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class="intro">
 			<p>
-				In this page, we can see number of people benefitted from SNAP region wise. People from Southeast(SERO) the most number of benefits as compared to other regions followed by MWRO,WRO and SWRO. Unlike otehr regions, there is increase in the benefits received by SWRO in year 2015.<br>
+				In this page, we can see number of people benefitted from SNAP region wise. People from Southeast(SERO) the most number of benefits as compared to other regions followed by MWRO,WRO and SWRO. Unlike other regions, there was increase in the benefits received by SWRO in year 2015. Please click "Beneficiaries By State" to view number of beneficiaries from each state.<br>
 			</p>
 		</div>
 	</head>
