--- a/regions.html
+++ b/regions.html
@@ -272,7 +272,7 @@
 		<footer>
     		<ul>
         		<p>
-					<b>Desclaimer:</b> This site is built for learning purpose only.
+					<b>Disclaimer:</b> This site is built for learning purpose only.
 				</p>
 		</ul>
 		</footer>
