--- a/regions.html
+++ b/regions.html
@@ -28,7 +28,7 @@
 		<div>
 			<table>
 				<td>
-					<text>The below image is for FNS region representation only. Source:</text>
+					<text>The below image is for FNS region representation only. Source:<a href="https://www.fns.usda.gov/fns-regional-offices">source</a></text>
 					<img src="/FNS Regions.png" align="left" animation-delay="2s">
 				</td>
 				<td>
