--- a/regions.html
+++ b/regions.html
@@ -30,6 +30,7 @@
 				<td>
 					<text>The below image is for FNS region representation only. Source:<a href="https://www.fns.usda.gov/fns-regional-offices">source</a></text>
 					<img src="/FNS Regions.png" align="left" animation-delay="2s">
+					<text>Source:<a href="https://www.fns.usda.gov/fns-regional-offices"></a></text>
 				</td>
 				<td>
 					<div id="byregions" class="svgregions" align="center">		
