--- a/states.html
+++ b/states.html
@@ -7,7 +7,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<div class="header">
-        		<h2>Number of People Assisted by US Food and Nutrition Service Program SNAP</h2>				
+        		<h2>How many people in US receive assistance from FNS for buying nutritious food?</h2>				
     		</div>
 		<div class="pages">
 			<nav>
@@ -168,11 +168,11 @@
 		<footer>
     		<ul>
 				<p>
-					Source: <li><a href="https://en.wikipedia.org/wiki/Supplemental_Nutrition_Assistance_Program">Wikipedia/SNAP</a></li>
-					<li><a href="https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap">USDA-FNS</a></li>
+					Source: <a href="https://en.wikipedia.org/wiki/Supplemental_Nutrition_Assistance_Program">Wikipedia/SNAP</a>
+					<a href="https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap">USDA-FNS</a>
 				</p>
         		<p>
-					<b>Desclaimer:</b> This site is built for learning purpose only.
+					<b>Disclaimer:</b> This site is built for learning purpose only.
 				</p>
 		</ul>
 		</footer>
