--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
 		<footer>
     		<ul>
         		<p>
+					Source: <a href="https://en.wikipedia.org/wiki/Supplemental_Nutrition_Assistance_Program">Wikipedia/SNAP</a>
+					<a href="https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap">USDA-FNS</a>
 				<b>Disclaimer:</b> This site is built for learning purpose only.
 			</p>
 		</ul>
