--- a/regions.html
+++ b/regions.html
@@ -28,7 +28,8 @@
 		<div>
 			<table>
 				<td>
-					<text>The below image is for FNS region representation only. Source:<a href="https://www.fns.usda.gov/fns-regional-offices">source</a></text>
+					<text>The below image is for FNS region representation only.<br> 
+						For source please see bottom of this page</text>
 					<img src="/FNS Regions.png" align="left" animation-delay="2s">
 					
 				</td>
@@ -274,7 +275,8 @@
     		<ul>
         		<p>
 					Source: <a href="https://en.wikipedia.org/wiki/Supplemental_Nutrition_Assistance_Program">Wikipedia/SNAP</a>
-					<a href="https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap">USDA-FNS</a>
+					<a href="https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap">USDA-FNS-DATA</a>
+					<a href="https://www.fns.usda.gov/fns-regional-offices"></a>Image source</a><
 					<b>Disclaimer:</b> This site is built for learning purpose only.
 				</p>
 		</ul>
