--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<div class="header">
-        		<h2>Number of People Assisted by US Food and Nutrition Service Program SNAP</h2>				
+			h2>How many people in US receive assistance from FNS for buying nutritious food?</h2>				
     		</div>
 		<div class="pages">
 			<nav>
