--- a/regions.html
+++ b/regions.html
@@ -112,7 +112,7 @@
 						.attr("x", 0 - (height / 2))
 						.attr("dy","1.5em")
 						.style("text-anchor","middle")
-						.style("font-size","14px")
+						.style("font-size","16px")
 						.style("font-family","sans-serif")
 						.text("Number of Persons (in Millinos)");
 							
@@ -121,7 +121,7 @@
 						.attr("transform","translate(" + width / 2 + "," + (height + margin.top) + ")")
 						.attr("dx","1.5em")
 						.style("text-anchor","middle")
-						.style("font-size","14px")
+						.style("font-size","16px")
 						.style("font-family","sans-serif")
 						.text("Year");
 
@@ -276,8 +276,8 @@
         		<p>
 					Source: <a href="https://en.wikipedia.org/wiki/Supplemental_Nutrition_Assistance_Program">Wikipedia/SNAP</a>
 					<a href="https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap">USDA-FNS-DATA</a>
-					<a href="https://www.fns.usda.gov/fns-regional-offices"></a>Image source</a><
-					<b>Disclaimer:</b> This site is built for learning purpose only.
+					<a href="https://www.fns.usda.gov/fns-regional-offices"></a>Image source</a>
+					<b style="color: white;">Disclaimer: This site is built for learning purpose only.</b>
 				</p>
 		</ul>
 		</footer>
