--- a/regions.html
+++ b/regions.html
@@ -28,7 +28,7 @@
 		<div>
 			<table>
 				<td>
-					<text>The below image is for FNS region representation only.<br> 
+					<text>The below image is for FNS region representation only.
 						For source please see bottom of this page</text>
 					<img src="/FNS Regions.png" align="left" animation-delay="2s">
 					
