--- a/regions.html
+++ b/regions.html
@@ -276,7 +276,7 @@
         		<p>
 					Source: <a href="https://en.wikipedia.org/wiki/Supplemental_Nutrition_Assistance_Program">Wikipedia/SNAP</a>
 					<a href="https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap">USDA-FNS-DATA</a>
-					<a href="https://www.fns.usda.gov/fns-regional-offices"></a>Image source</a>
+					<a href="https://www.fns.usda.gov/fns-regional-offices">Image source</a><br>
 					<b style="color: white;">Disclaimer: This site is built for learning purpose only.</b>
 				</p>
 		</ul>
