--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 			    	The Supplemental Nutrition Assistance Program (SNAP) is a United States federal program that provides food-purchasing assistance for low and no-income people. Below graph represents the stats of how many people were benefitted from this SNAP program FY2000-19. As we can see, there is a leap in number of people seeking assistance due to high unemployment rate during recession FY2008-11.In 2013, approximately 50 million people received benefits. To view region wise beneficiaries, please click "Beneficiaries By Regions" tab.<br>
 			    </p>
 		</div>		 
-		<div id="USChart" align="center"></div>
+		<div id="USChart" align="center">
 		<svg width=800 height=500></svg>
+		</div>
 		<div id="tooltip"></div>		
 			<script>
 			async function init() {
