--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
 			.attr('width', xs.bandwidth())
 			.attr('height',function(d,i) {return hs(parseInt(d.MPersons));})
 			.transition()
-			.duration(3000);
-			// .on("mouseover", function(d,i) {
-    		// 	tooltip.style("visibility", "visible")
-    		// 			.style("opacity", 1)
-			// 			.style("left", (d3.event.pageX)+"px")
-			// 			.style("top", (d3.event.pageY)+"py")
-			// 			.html("Total Amount Distributed is $"+d.BCost+ "Billion Dollars");
-			// })
-			// .on("mouseout", function() {tooltip.style("opacity", 0)});
+			.duration(3000)
+			.on("mouseover", function(d,i) {
+    		 	tooltip.style("visibility", "visible")
+    		 			.style("opacity", 1)
+			 			.style("left", (d3.event.pageX)+"px")
+			 			.style("top", (d3.event.pageY)+"py")
+			 			.html("Total Amount Distributed is $"+d.BCost+ "Billion Dollars");
+			 })
+			 .on("mouseout", function() {tooltip.style("opacity", 0)});
 						
 				// y axis
 			svg1.append("g")
