--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
 			    	The Supplemental Nutrition Assistance Program (SNAP) is a United States federal program that provides food-purchasing assistance for low and no-income people. Below graph represents the stats of how many people were benefitted from this SNAP program FY2000-19. As we can see, there is a leap in number of people seeking assistance due to high unemployment rate during recession FY2008-11.In 2013, approximately 50 million people received benefits. To view region wise beneficiaries, please click "Beneficiaries By Regions" tab.<br>
 			    </p>
 		</div>		 
-		<div id="USChart" align="center">
+		<div id="USChart" align="center"></div>
 		<svg width=800 height=500></svg>
-		</div>
 		<div id="tooltip"></div>		
 			<script>
 			async function init() {
@@ -62,7 +61,7 @@
 			height = 400
 			width = 700
 			var margin = {left:50, right:50, top:50, bottom:50}
-			var svg1 = d3.select("svg")
+			var svg1 = d3.select("#USChart").append("svg")
 				.attr("width", width + margin.left + margin.right)
 				.attr("height",height + margin.top + margin.bottom)
 				.append("g")
@@ -76,18 +75,18 @@
 			.append('rect')			
 			.attr('x',function(d,i) {return xs(parseInt(d.Year));})
 			.attr('y',function(d,i) {return ys(parseInt(d.MPersons));})
-			.attr('width', xs.bandwidth())
-			.attr('height',function(d,i) {return hs(parseInt(d.MPersons));})
 			.transition()
 			.duration(3000)
-			.on("mouseover", function(d,i) {
+			.attr('width', xs.bandwidth())
+			.attr('height',function(d,i) {return hs(parseInt(d.MPersons));})			
+				.on("mouseover", function(d,i) {
     		 	tooltip.style("visibility", "visible")
     		 			.style("opacity", 1)
 			 			.style("left", (d3.event.pageX)+"px")
 			 			.style("top", (d3.event.pageY)+"py")
 			 			.html("Total Amount Distributed is $"+d.BCost+ "Billion Dollars");
 			 })
-			 .on("mouseout", function() {tooltip.style("opacity", 0)});
+			 	.on("mouseout", function() {tooltip.style("opacity", 0)});
 						
 				// y axis
 			svg1.append("g")
