--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</nav>   
 		</div>
 	</head>
-	<body onload='init()';>
+	<body>
 		<div class="intro">
 			    <p>
 			    	The Supplemental Nutrition Assistance Program (SNAP) is a United States federal program that provides food-purchasing assistance for low and no-income people. Below graph represents the stats of how many people were benefitted from this SNAP program FY2000-19. As we can see, there is a leap in number of people seeking assistance due to high unemployment rate during recession FY2008-11.In 2013, approximately 50 million people received benefits. To view region wise beneficiaries, please click "Beneficiaries By Regions" tab.<br>
@@ -38,9 +38,9 @@
 		<svg width=800 height=500></svg>
 		<div id="tooltip"></div>		
 			<script>			
-			function init() {
 			
-			const data = d3.csv("https://raw.githubusercontent.com/bipinkarnati/bipinkarnati.github.io/master/USTotals.csv");
+			
+			d3.csv("https://raw.githubusercontent.com/bipinkarnati/bipinkarnati.github.io/master/USTotals.csv",
 			// data.forEach(function(d) {
 			// 	d.Year = +d.Year;
 			// 	d.Households = +d.Households;
@@ -52,7 +52,7 @@
 			// 	d.State = d.State;
 			// 	d.BCost = +d.BCost;
 			//});			
-			data.then(function(data) {			
+			function(data) {			
 			var tooltip = d3.select("#tooltip");				
 			var state = "US"
 			console.log(data)
@@ -160,8 +160,7 @@
 			.attr("stroke", "steelblue")
 			.attr("stroke-width", "2")
 			.attr("stroke-dasharray", "10");
-		})
-			}
+		});			
 			</script>
 		<footer>
     		<ul>
