--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 				text-align: center;
 				width: 60px; height: 40px;
 				background: white;
-				border: 0px
+				border: 2px
 			}
 	</style>
 	<head>
@@ -42,17 +42,17 @@
 			
 			async function init() {
 			const data = await d3.csv("https://raw.githubusercontent.com/bipinkarnati/bipinkarnati.github.io/master/USTotals.csv");
-			// data.forEach(function(d) {
-			// 	d.Year = +d.Year;
-			// 	d.Households = +d.Households;
-			// 	d.Persons = +d.Persons;
-			// 	d.TotalCost = +d.TotalCost;
-			// 	d.CostPerHousehold = +d.CostPerHousehold;
-			// 	d.CostPerPerson = +d.CostPerPerson;
-			// 	d.MPersons = +d.MPersons;
-			// 	d.State = d.State;
-			// 	d.BCost = +d.BCost;
-			//});						
+			data.forEach(function(d) {
+				d.Year = +d.Year;
+				d.Households = +d.Households;
+				d.Persons = +d.Persons;
+				d.TotalCost = +d.TotalCost;
+				d.CostPerHousehold = +d.CostPerHousehold;
+				d.CostPerPerson = +d.CostPerPerson;
+				d.MPersons = +d.MPersons;
+				d.State = d.State;
+				d.BCost = +d.BCost;
+			});						
 			var tooltip = d3.select("#tooltip");				
 			var state = "US"
 			console.log(data)
