--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 		}	
 		function getTooltipString(year, Households, BCost){
 		return "<table>" +
-			"<tr><td>Year: </td><td>" + year + </td></tr>" +
+			"<tr><td>Year: </td><td>" + year + "</td></tr>" +
 			"<tr><td>Households: </td><td>" + Households + "</td></tr>" +
 			"<tr><td>Amount (in Billions): </td><td>" + BCost + "</td></tr>" +
 			"</table>"
