--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 				opacity: 0;
 				position: absolute;
 				text-align: center;
-				width: 60px; height: 40px;
+				width: 160px; height: 90px;
 				background: white;
-				border: 2px
+				border-color: black;
+                		border-style: solid;
+                		border-width: 0.8px;
+                		display: inline-block;
+				padding: 2px
 			}
 	</style>
 	<head>
