--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			 			.style("top", (d3.event.pageY)+"py")
 						.html(getTooltipString(d.Year, d.Households, d.BCost))
 			 			//.html("Total Amount Distributed is $"+d.BCost+ "Billion Dollars");
-			d3.select(this).style("stroke", "black");
+			d3.select(this).style("stroke", "red");
 			 })
 			.on("mouseout", function() {tooltip.style("opacity", 0)})
 			.attr('x',function(d,i) {return xs(parseInt(d.Year));})
