--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<script src='https://d3js.org/d3.v5.min.js'></script>
-	<style> rect {fill: #488f31; stroke: black; }
+	<style> rect {fill: #f0b8b8; stroke: black; }
 			#tooltip {
 				opacity: 0;
 				position: absolute;
