--- a/states.html
+++ b/states.html
@@ -66,7 +66,7 @@
 			.attr("value", function(d) {return d})
 			.text(function(d) {return d});
 			//default state
-			var state = "Alabama"
+			var state = "Wisconsin"
 			//console.log(data)		
 				
 				//chart data
@@ -144,7 +144,7 @@
 			.style("text-anchor","middle")
 			.style("font-size","16px")
 			.style("font-family","sans-serif")
-			.text("Number of Persons (in Millinos)");
+			.text("Individuals in Millinos");
 				
 				//x label
 			svg1.append("text")
