--- a/states.html
+++ b/states.html
@@ -66,7 +66,7 @@
 			.attr("value", function(d) {return d})
 			.text(function(d) {return d});
 			//default state
-			var state = "Wisconsin"
+			var state = "Alabama"
 			//console.log(data)		
 				
 				//chart data
@@ -81,7 +81,7 @@
 
 			var state_data = data.filter(function(d) {return d && d.State == state});
 			
-			console.log(state_data)
+			//console.log(state_data)
 			
 			var regions = ["NERO","MARO","SERO","MWRO","SWRO","MPRO","WRO"]
 			
