--- a/regions.html
+++ b/regions.html
@@ -114,7 +114,7 @@
 						.style("text-anchor","middle")
 						.style("font-size","16px")
 						.style("font-family","sans-serif")
-						.text("Number of Persons (in Millinos)");
+						.text("Individuals (in Millinos)");
 							
 							//x label
 						svg1.append("text")
@@ -132,7 +132,7 @@
 						.duration(1000)
 						.attr("x", 110)
 						.attr("y", 40)
-						.text("Southeast Regional Office")
+						.text("Southeast Region")
 						.style("font-size","11px");
 							//append  line
 						svg1.append("line")
@@ -152,7 +152,7 @@
 						.duration(1000)
 						.attr("x", 110)
 						.attr("y", 60)
-						.text("Midwest Regional Office")
+						.text("Midwest Region")
 						.style("font-size","11px");
 							//append dotted line
 						svg1.append("line")
@@ -172,7 +172,7 @@
 						.duration(1000)
 						.attr("x", 110)
 						.attr("y", 80)
-						.text("Western Regional Office")
+						.text("Western Region")
 						.style("font-size","11px");
 							//append  line
 						svg1.append("line")
@@ -192,7 +192,7 @@
 						.duration(1000)
 						.attr("x", 110)
 						.attr("y", 100)
-						.text("Southwest Regional Office")
+						.text("Southwest Region")
 						.style("font-size","11px");
 							//append  line
 						svg1.append("line")
@@ -212,7 +212,7 @@
 						.duration(1000)
 						.attr("x", 110)
 						.attr("y", 120)
-						.text("Northeast Regional Office")
+						.text("Northeast Region")
 						.style("font-size","11px");
 							//append line
 						svg1.append("line")
@@ -232,7 +232,7 @@
 						.duration(1000)
 						.attr("x", 110)
 						.attr("y", 140)
-						.text("Mid-Atlantic Regional Office")
+						.text("Mid-Atlantic Region")
 						.style("font-size","11px");
 							//append  line
 						svg1.append("line")
@@ -252,7 +252,7 @@
 						.duration(1000)
 						.attr("x", 110)
 						.attr("y", 160)
-						.text("Mountain Plains Regional Office")
+						.text("Mountain Plains Region")
 						.style("font-size","11px");
 							//append  line
 						svg1.append("line")
