--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<div class="header">
-			<h2>How many people in US receive assistance from FNS for buying nutritious food?</h2>				
+			<h2 align="center">How many people in US receive assistance from FNS for buying nutritious food?</h2>				
     		</div>
 		<div class="pages">
 			<nav>
@@ -110,7 +110,7 @@
 				//y label
 			svg1.append("text")
 			.attr("transform","rotate(-90)")
-			.attr("y", 0 - (margin.left) + 10)
+			.attr("y", 0 - (margin.left) - 10)
 			.attr("x", 0 - (height / 2))
 			.attr("dy","1.5em")
 			.style("text-anchor","middle")
