--- a/states.html
+++ b/states.html
@@ -7,7 +7,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<div class="header">
-        		<h2>How many people in US receive assistance from FNS for buying nutritious food?</h2>				
+			<h2 align="center">How many people in US receive assistance from FNS for buying nutritious food?</h2>				
     		</div>
 		<div class="pages">
 			<nav>
