--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			.style("text-anchor","middle")
 			.style("font-size","16px")
 			.style("font-family","sans-serif")
-			.text("Number of Persons (in Millinos)");
+			.text("Individuals (in Millinos)");
 				
 				//x label
 			svg1.append("text")
